# midi-pages

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  config.toml.example
.github/workflows/: ci.yml
docs/adr/: 0001-rust-and-midir.md  0002-loopmidi-on-windows.md  0003-note-offset-paging.md  0004-led-state-cache.md  0005-sysex-lighting-rewrite.md  0006-held-pad-note-off-on-page-change.md  0007-configurable-page-buttons.md  0008-toml-config-no-gui.md  0009-multi-device-profiles.md  0010-ci-and-release-pipeline.md  0011-per-port-paging.md  0012-auto-create-virtual-ports.md  0014-global-buttons.md  README.md
examples/: listen_port.rs  loopback_test.rs
src/: config.rs  lib.rs  main.rs  ports.rs  proxy.rs  shutdown.rs  wms_bindings.rs
src/midi/: apc_mini.rs  device.rs  mini_mk3.rs  mod.rs  parse.rs  sysex_lighting.rs  ump.rs
tests/: integration.rs
