[package]
name = "midi-pages"
version = "0.1.0"
edition = "2024"
description = "Virtual MIDI paging proxy for Novation Launchpad and Akai APC mini"
license = "MIT"
repository = "https://github.com/lhns/midi-pages"
readme = "README.md"

[dependencies]
midir = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
